@@ -146,6 +146,7 @@ Vadim Chugunov
 David Cinege
 Mike Clarkson
 Brad Clements
+Andrew Clegg
 Steve Clift
 Nick Coghlan
 Josh Cogliati
